--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ preserveTaxonomyNames = true
     since = 2019
     author = "Kim Yang"                          # Author's name
     avatar = "/images/me/avatar.png"           # Author's avatar
-    subtitle = "Just for Fun"                  # Subtitle
+    subtitle = "Never give up"                  # Subtitle
     cdn_url = ""           # Base CDN URL
     home_mode = "" # post or other
     enableGitalk = true # gitalk 评论系统
