--- a/config.toml
+++ b/config.toml
@@ -46,15 +46,15 @@ preserveTaxonomyNames = true
     baiduAnalytics = ""
     license= '本文采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/" target="_blank">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可'
 [params.social]
-    GitHub = "xxoo"
-    Twitter = "xxoo"
-    Email   = "xxoo"
-    Instagram = "xxoo"
+    GitHub = "https://github.com/KimYangOfCat"
+    # Twitter = "sxxx"
+    Email   = "kim_yang95@163.com"
+    # Instagram = "xxoo"
     Wechat = "/images/me/wechat.png"  # Wechat QRcode image
-    Facebook = "xxoo"
-    Telegram = "xxoo"
-    Dribbble = "xxoo"
-    Medium = "xxoo"
+    # Facebook = "xxoo"
+    #Telegram = "xxoo"
+    # Dribbble = "xxoo"
+     #Medium = "xxoo"
 [params.gitalk] # Github: https://github.com/gitalk/gitalk
     clientID = "" # Your client ID
     clientSecret = "" # Your client secret
