change travisCI second

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,17 @@
-language: go
-go:
-  - "1.8"  # 指定Golang 1.8
-# Specify which branches to build using a safelist
-# 分支白名单限制：只有 master 分支的提交才会触发构建
-# branches:
-#   only:
-#     - master
+---
+dist: xenial
+
 install:
-  # 安装最新的hugo
-  - wget https://github.com/gohugoio/hugo/releases/download/v0.51/hugo_0.51_Linux-64bit.deb
-  - sudo dpkg -i hugo*.deb
-  # 安装主题
-  - git clone https://github.com/liuzc/LeaveIt
+  - wget -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.55.4/hugo_extended_0.55.4_Linux-64bit.deb
+  - sudo dpkg -i /tmp/hugo.deb
+  - git submodule update --init --recursive
+
 script:
-  # 运行hugo命令
   - hugo
-after_script:
-  # 部署
-  - cd ./public
-  - git init
-  - git config user.name "KimYangOfCat"
-  - git config user.email "kim_yang95@163.com"
-  - git add .
-  - git commit -m "Update Blog By TravisCI With Build $TRAVIS_BUILD_NUMBER"
-  # Github Pages
-  - git push --force --quiet "https://KimYangOfCat:$GITHUB_TOKEN@github.com/KimYangOfCat/KimYangOfCat.github.io" master:master
-  # Github Pages
-  - git push --quiet "https://KimYangOfCat:$GITHUB_TOKEN@github.com/KimYangOfCat/KimYangOfCat.github.io" master:master --tags
+
 deploy:
-  provider: pages # 重要，指定这是一份github pages的部署配置
-  skip-cleanup: true # 重要，不能省略
-  local-dir: public # 静态站点文件所在目录
-  # target-branch: master # 要将静态站点文件发布到哪个分支
-  github-token: $GITHUB_TOKEN # 重要，$GITHUB_TOKEN是变量，需要在GitHub上申请、再到配置到Travis
-  # fqdn:  # 如果是自定义域名，此处要填
-  keep-history: true # 是否保持target-branch分支的提交记录
-  on:
-    branch: master # 博客源码的分支
+  - provider: script
+    script: bash deploy.sh
+    skip_cleanup: true
+    on:
+      branch: master # or master if you are using the two-repository approach
