--- a/config.toml
+++ b/config.toml
@@ -50,7 +50,7 @@ preserveTaxonomyNames = true
     # Twitter = "sxxx"
     Email   = "kim_yang95@163.com"
     # Instagram = "xxoo"
-    Wechat = "/images/me/wechat.png"  # Wechat QRcode image
+    # Wechat = "/images/me/wechat.png"  # Wechat QRcode image
     # Facebook = "xxoo"
     #Telegram = "xxoo"
     # Dribbble = "xxoo"
