--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ preserveTaxonomyNames = true
     baiduAnalytics = ""
     license= '本文采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/" target="_blank">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可'
 [params.social]
-    GitHub = "https://github.com/KimYangOfCat"
+    GitHub = "KimYangOfCat"
     # Twitter = "sxxx"
     Email   = "kim_yang95@163.com"
     # Instagram = "xxoo"
