--- a/config.toml
+++ b/config.toml
@@ -3,10 +3,10 @@ title = "Kim`s Blog" # 浏览器的标题
 languageCode = "zh-cn" # 语言
 hasCJKLanguage = true # 开启可以让「字数统计」统计汉字
 theme = "LeaveIt" # 主题 (需要自己下载)
-paginate = 11 # 每页的文章数
+paginate = 10 # 每页的文章数
 enableEmoji = true # 支持 Emoji
 enableRobotsTXT = true # 支持 robots.txt
-googleAnalytics = "" # Google 统计 id
+googleAnalytics = "UA-150383643-1" # Google 统计 id
 preserveTaxonomyNames = true
 [blackfriday]
   hrefTargetBlank = true
@@ -38,7 +38,7 @@ preserveTaxonomyNames = true
     subtitle = "Never give up"                  # Subtitle
     cdn_url = ""           # Base CDN URL
     home_mode = "" # post or other
-    enableGitalk = true # gitalk 评论系统
+    enableGitalk = false # gitalk 评论系统
     google_verification = ""
     description = "" # (Meta) 描述
     keywords = "" # site keywords
@@ -48,7 +48,7 @@ preserveTaxonomyNames = true
 [params.social]
     GitHub = "KimYangOfCat"
     # Twitter = "sxxx"
-    Email   = "kim_yang95@163.com"
+    Email  = "kim_yang95@163.com"
     # Instagram = "xxoo"
     # Wechat = "/images/me/wechat.png"  # Wechat QRcode image
     # Facebook = "xxoo"
