:see_no_evil: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 # Edit at https://www.gitignore.io/?templates=go,hugo,macos,windows,webstorm,visualstudiocode
 
 yarn.lock
-
-node_modules/
+blog/.vuepress/dist/*
+node_modules/*
 ### Go ###
 # Binaries for programs and plugins
 *.exe
