--- a/.github/workflows/deploy-to-cvm.yml
+++ b/.github/workflows/deploy-to-cvm.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: build
-        - uses: actions/checkout@v2
-        - uses: actions/setup-node@v1
-        - run: 
+        uses: actions/checkout@v2
+        uses: actions/setup-node@v1
+        run: 
             npm install
             npm run build
 
