--- a/.github/workflows/deploy-to-cvm.yml
+++ b/.github/workflows/deploy-to-cvm.yml
@@ -23,18 +23,12 @@ jobs:
         env:
           CI: true
 
-      - name: Deploy to cvm
-        uses: easingthemes/ssh-deploy@v2.0.7
-        env:
-          # 本地.ssh文件下的私钥id_rsa，存在secrets的TOKEN中
-          SSH_PRIVATE_KEY: ${{ secrets.SSH }}
-          # 复制操作的参数。"-avzr --delete"意味部署时清空服务器目标目录下的文件
-          ARGS: "-avzr --delete"
-          # 源目录，相对于$GITHUB_WORKSPACE根目录的路径
-          SOURCE: "dist/"
-          # 服务器域名
-          REMOTE_HOST: "kimyang.cn"
-          # 腾讯云默认用户名为root
-          REMOTE_USER: "kim"
-          # 目标目录
-          TARGET: "/srv/kim-blog/"
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@master
+        with:
+          host: "kimyang.cn"
+          username: "kim"
+          key: ${{ secrets.SSH }}
+          source: "dist/"
+          target: "/srv/kim-blog/"
+          rm: true
