--- a/.github/workflows/deploy-to-cvm.yml
+++ b/.github/workflows/deploy-to-cvm.yml
@@ -29,17 +29,17 @@ jobs:
           CI: true
       # 部署到腾讯云服务器
       - name: Deploy to Server
-        uses: easingthemes/ssh-deploy@v2.0.7
+        uses: burnett01/rsync-deployments@4.0
         env:
           # 本地.ssh文件下的私钥id_rsa，存在secrets的TOKEN中
-          SSH_PRIVATE_KEY: ${{ secrets.SSH }}
+          remote_key: ${{ secrets.SSH }}
           # 复制操作的参数。"-avzr --delete"意味部署时清空服务器目标目录下的文件
-          ARGS: "-avzr --delete"
+          switches: -avzr --delete
           # 源目录，相对于$GITHUB_WORKSPACE根目录的路径
-          SOURCE: "dist/"
+          path: dist/
           # 服务器域名
-          REMOTE_HOST: "kimyang.cn"
+          remote_host: kimyang.cn
           # 腾讯云默认用户名为root
-          REMOTE_USER: "kim"
+          remote_user: "kim"
           # 目标目录
-          TARGET: "/srv/kim-blog"
+          remote_path: "/srv/kim-blog"
