--- a/.github/workflows/deploy-to-cvm.yml
+++ b/.github/workflows/deploy-to-cvm.yml
@@ -32,7 +32,7 @@ jobs:
         uses: easingthemes/ssh-deploy@v2.2.11
         env:
           # 本地.ssh文件下的私钥id_rsa，存在secrets的TOKEN中
-          SSH_PRIVATE_KEY: ${{ secrets.TOKEN }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH }}
           # 复制操作的参数。"-avzr --delete"意味部署时清空服务器目标目录下的文件
           ARGS: "-avzr --delete"
           # 源目录，相对于$GITHUB_WORKSPACE根目录的路径
@@ -42,4 +42,4 @@ jobs:
           # 腾讯云默认用户名为root
           REMOTE_USER: "kim"
           # 目标目录
-          TARGET: "/srv/kim-blog"
+          TARGET: "/srv/kim-blog/"
