--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "md5": "2.2.1",
     "vue-click-outside": "1.1.0",
     "vue-router": "^3.4.5",
-    "vuepress": "^1.5.3",
+    "vuepress": "^1.8.1",
+    "vuepress-plugin-nuggets-style-copy": "^1.0.3",
     "vuepress-plugin-smooth-scroll": "^0.0.9"
   }
 }
