--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "vuepress build blog"
   },
   "dependencies": {
+    "@vuepress-reco/vuepress-plugin-rss": "^1.0.2",
     "vuepress": "^1.8.2",
     "vuepress-plugin-permalink-pinyin": "^1.0.0",
     "vuepress-theme-reco": "^1.6.6"
