--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "build": "vuepress build blog"
   },
   "dependencies": {
+    "@vuepress-reco/vuepress-plugin-extract-code": "^1.0.4",
     "@vuepress-reco/vuepress-plugin-rss": "^1.0.2",
+    "@vuepress/plugin-pwa": "^1.8.2",
+    "markdown-it-katex": "^2.0.3",
     "vuepress": "^1.8.2",
+    "vuepress-plugin-boxx": "^0.0.7",
+    "vuepress-plugin-flowchart": "^1.4.3",
+    "vuepress-plugin-mermaidjs": "^1.8.1",
+    "vuepress-plugin-nuggets-style-copy": "^1.0.3",
     "vuepress-plugin-permalink-pinyin": "^1.0.0",
+    "vuepress-plugin-sponsor": "^1.0.0",
     "vuepress-theme-reco": "^1.6.6"
   }
 }
