--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build": "vuepress build blog"
   },
   "dependencies": {
+    "@renovamen/vuepress-plugin-katex": "^0.1.8",
     "@vuepress-reco/vuepress-plugin-extract-code": "^1.0.4",
     "@vuepress-reco/vuepress-plugin-rss": "^1.0.2",
     "@vuepress/plugin-pwa": "^1.8.2",
-    "markdown-it-katex": "^2.0.3",
     "vuepress": "^1.8.2",
     "vuepress-plugin-boxx": "^0.0.7",
     "vuepress-plugin-flowchart": "^1.4.3",
