--- a/.github/workflows/deploy-to-cvm.yml
+++ b/.github/workflows/deploy-to-cvm.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Checkout # step的名称，将会在 github action 的控制台中显示
         # 选择一个action，可以理解为若干 steps.run，有利于代码复用
         uses: actions/checkout@master
+        with:
+          submodules: true
       # 安装使用 node:10
       - name: use Node.js 10
         uses: actions/setup-node@v1
