--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "blog/tc39-work"]
 	path = blog/tc39-work
-	url = https://github.com/KimYangOfCat/tc39-work
+	url = git@github.com:KimYangOfCat/tc39-work.git
 	branch = zh
