--- a/.github/workflows/deploy-to-cvm.yml
+++ b/.github/workflows/deploy-to-cvm.yml
@@ -27,6 +27,7 @@ jobs:
       - name: npm install and build
         run: |
           npm install
+          rm -rf ./blog/onlygithub
           npm run build
         env:
           CI: true
