--- a/.github/workflows/deploy-to-cvm.yml
+++ b/.github/workflows/deploy-to-cvm.yml
@@ -26,9 +26,9 @@ jobs:
       # 运行命令，npm install && npm run build
       - name: npm install and build
         run: |
-          npm install
+          yarn
           rm -rf ./blog/onlygithub
-          npm run build
+          yarn build
         env:
           CI: true
       # 部署到腾讯云服务器
